design completo fino a nav (incompleto main e succ.)

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.css" integrity="sha512-f73UKwzP1Oia45eqHpHwzJtFLpvULbhVpEJfaWczo/ZCV5NWSnK4vLDnjTaMps28ocZ05RbI83k2RlQH92zy7A==" crossorigin="anonymous"/>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
     <meta charset="utf-8">
     <title></title>
@@ -11,19 +11,19 @@
 
     <header>
       <div class="layover"></div>
-      <h1>NATURAL</h1>
-      <h2>ANOTHER BEAUTIFUL ORGANIC THEME</h2>
+      <img id="logo" src="img/natural-logo.png" alt="nature logo">
+      <h2 id="text-logo">ANOTHER BEAUTIFUL ORGANIC THEME</h2>
     </header>
 
-    <nav>
-      <ul>
-        <li>HOME</li>
-        <li>ABOUT</li>
-        <li>PAGE TEMPLATES</li>
-        <li>A PARENT PAGE</li>
-        <li>FEATURES</li>
-        <li>BLOG</li>
-        <li>CONTACT</li>
+    <nav id="menu">
+      <ul id="menu-container">
+        <li class="menu-button">HOME</li>
+        <li class="menu-button">ABOUT</li>
+        <li class="menu-button">PAGE TEMPLATES</li>
+        <li class="menu-button">A PARENT PAGE</li>
+        <li class="menu-button">FEATURES</li>
+        <li class="menu-button">BLOG</li>
+        <li class="menu-button">CONTACT</li>
       </ul>
     </nav>
 
