--- a/index.html
+++ b/index.html
@@ -28,44 +28,46 @@
     </nav>
 
     <main>
-      <section class="leftcolumn">
-        <h3>Organic Link</h3>
-        <br>
-        <a href="">How To Pick A WorldPress theme for 2019</a>
-        <a href="www.nonesistelapagina.it">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</a>
-        <a href="www.nonesistelapagina.it">How To Pick A WorldPress theme for 2019</a>
-        <a href="www.nonesistelapagina.it">How To Pick A WorldPress theme for 2019</a>
+      <aside id="left-column">
+        <i id="icon-rss"class="fas fa-rss-square"></i>
+        <h2 id="text-right-column">Organic Themes</h2>
+        <a class="link" href="www.nonesistelapagina.it">How To Pick A WorldPress theme for 2019</a><br>
+        <a class="link" href="www.nonesistelapagina.it">The Updated Gutenberg Portfolio Theme</a><br>
+        <a class="link" href="www.nonesistelapagina.it">Black Friday Through Cyber Mondial Deal For WordPress Webside Owners</a><br>
+        <a class="link" href="www.nonesistelapagina.it">The Ultimate Guide To Optimizing Your WordPress Theme For Gutenberg</a><br>
+        <a class="link" href="www.nonesistelapagina.it">A Better WordPress Page Builder - Organic Builder Widgets Pro</a><br>
+      </aside>
+
+      <section id="main-column">
+        <h2 id="text-main-column">THREE COLUMN</h2>
+        <p>testo Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </section>
 
-      <section class="maincolumn">
-        <h4>THREE COLUMN</h4>
-        testo Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        <br><hr>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </section>
-
-      <section class="rightcolumn">
+      <aside id="right-column">
         <div class="widget">
-          <h4>testo widget</h4>
-          Tipici esempi di congegni sono i pulsanti dell'interfaccia grafica di un programma (che possono essere premuti per inviare comandi) o i checkbox usati per operare delle scelte fra varie opzioni disponibili.
+          <h2 class="text-widget">Text Widget</h2>
+          <p>This is an example of a text widget. You could write a brief introduction to your site, add links, image, video, HTML and more using a text widget. It's pretty handy!</p>
         </div>
         <div class="widget">
-          <h4>testo widget</h4>
-          Tipici esempi di congegni sono i pulsanti dell'interfaccia grafica di un programma (che possono essere premuti per inviare comandi) o i checkbox usati per operare delle scelte fra varie opzioni disponibili.
+          <h2 class="text-widget">Testo Widget</h2>
+          <p>This is an example of a text widget. You could write a brief introduction to your site, add links, image, video, HTML and more using a text widget. It's pretty handy!</p>
         </div>
         <div class="widget">
-          <h4>testo widget</h4>
-          Tipici esempi di congegni sono i pulsanti dell'interfaccia grafica di un programma (che possono essere premuti per inviare comandi) o i checkbox usati per operare delle scelte fra varie opzioni disponibili.
+          <h2 class="text-widget">Testo Widget</h2>
+          <p>This is an example of a text widget. You could write a brief introduction to your site, add links, image, video, HTML and more using a text widget. It's pretty handy!</p>
         </div>
-      </section>
+      </aside>
     </main>
 
-    <footer>pagina realizzata da Marco Calvieri
-      <hr>
-      <div class="icon"><i class="fab fa-facebook-square"></i></div>
-      <div class="icon"><i class="fab fa-instagram"></i></div>
-      <div class="icon"><i class="fab fa-github"></i></div>
+    <footer>
+      <div>
+        <p id="signature">Pagina realizzata da Marco Calvieri</p>
+      </div>
+      <div>
+        <div class="icon"><i class="fab fa-facebook-square"></i></div>
+        <div class="icon"><i class="fab fa-instagram"></i></div>
+        <div class="icon"><i class="fab fa-github"></i></div>
+      </div>
     </footer>
 
   </body>
